Commiting after an ugly crash of the Unreal Engine in the middle of Lecture 76.

--- a/BuildingEscape/Config/DefaultEngine.ini
+++ b/BuildingEscape/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/JoseFirstMap.JoseFirstMap
 GameDefaultMap=/Game/JoseFirstMap.JoseFirstMap
-GlobalDefaultGameMode="/Script/BuildingEscape.BuildingEscapeGameMode"
+GlobalDefaultGameMode=/Game/BuildingEscapeGameModeBase_BP.BuildingEscapeGameModeBase_BP_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
